syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "API.gRPCService";

package appointment_package;

service AppointmentService {
	rpc CreateAppointment(CreateAppointmentRequest) returns (CreateAppointmentResponse);
	rpc GetAvailableWeekAppointments(GetWeekAppointmentsRequest) returns (GetWeekAppointmentsResponse);
	rpc GetOwnerAppointments(GetOwnerAppointmentsRequest) returns (GetOwnerAppointmentsResponse);
	rpc CancelAppointment(CancelAppointmentRequest) returns (CancelAppointmentResponse);
}

message CancelAppointmentRequest {
	string owner_phone = 1;
	string doctor_phone = 2;
	google.protobuf.Timestamp date = 3;
}

message CancelAppointmentResponse {
	bool cancelled = 1;
}

message GetOwnerAppointmentsRequest {
}

message GetOwnerAppointmentsResponse {
	repeated Appointment appointments = 1;
}

message GetWeekAppointmentsRequest {
	string doctor_phone = 1;
}

message GetWeekAppointmentsResponse {
	string exception_message = 1;
	repeated google.protobuf.Timestamp appointments = 2;
}

message CreateAppointmentRequest {
	Appointment appointment = 1;
}

message CreateAppointmentResponse {
	bool created = 1;
	string exception_message = 2;
}

message Appointment {
	string doctor_phone = 1;
	google.protobuf.Timestamp date = 2;
	string service_name = 3;
}